--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,76 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-  margin: 0px !important;
-}
-
-.bgcolor {
-  // box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.07);
-  background-color: #172b4d;
-}
-
-mat-sidenav-container {
-  background-color: #172b4d;
-}
-
-mat-sidenav-container,
-mat-sidenav-content,
-mat-sidenav {
-  height: 100% !important;
-}
-
-mat-sidenav {
-  width: 250px !important;
-}
-
-// mat-toolbar {
-//   min-height: 50px !important;
-//   max-height: 50px !important;
-// }
-
-mat-sidenav {
-  width: 200px;
-  background-color: #172b4d;
-}
-
-.flex1 {
-  flex: 1 !important;
-}
-.flex03 {
-  flex: 0.3 !important;
-}
-
-.row-style {
-  display: flex;
-  flex-direction: row;
-}
-.content-center {
-  display: grid;
-  justify-content: center;
-}
-
-.white-color {
-  color: white;
-}
-
-.cursor {
-  cursor: pointer;
-}
-
-.mat-toolbar-row,
-.mat-toolbar-single-row .height {
-  height: 35px !important;
-}
-
-.height:hover {
-  color: #00c7e6 !important;
-  background: rgba(0, 0, 0, 0.2);
-}
-
-.padding-top{
-  padding-top: 10px !important;
-}
-
-
+$background-color: #172b4d;
 // ToDOs
 // 1. create navigation component and move all nav related code from app component to new one
 // 2. Create all variables in variables scss file use them all the places where colors are being used
