added Comments for user creating

--- a/src/app/user-creation/user-creation.component.html
+++ b/src/app/user-creation/user-creation.component.html
@@ -1,1 +1,17 @@
 <p>user-creation works!</p>
+<!-- Steps in Tabs
+Personal details
+  Name
+  Username
+  Email
+  Phone
+Bank account details
+  Account number
+  name as per back details
+  IFSE code
+Payout split ratio
+Documents upload
+  Adhar
+  Pan-->
+
+
