User creation/ Profileeparation

--- a/src/app/user-creation/user-creation.component.html
+++ b/src/app/user-creation/user-creation.component.html
@@ -1,4 +1,11 @@
 <p>user-creation works!</p>
+
+<!-- USer create
+
+EMail, mobile, name, userNAme -->
+
+
+<!-- USer profile -->
 <!-- Steps in Tabs
 Personal details
   Name
