--- a/src/app/user-creation/user-creation.component.html
+++ b/src/app/user-creation/user-creation.component.html
@@ -16,7 +16,7 @@ Bank account details
   Account number
   name as per back details
   IFSE code
-Payout split ratio
+Payout split ratio -- dummy tab for now
 Documents upload
   Adhar
   Pan-->
