User creation page and profile page intial commit

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -12,7 +12,7 @@
     </div>
     <div>
 
-      <button mat-raised-button [mdePopoverTriggerFor]="appPopover" mdePopoverTriggerOn="click"
+      <button mat-button [mdePopoverTriggerFor]="appPopover" mdePopoverTriggerOn="click"
         #popoverTrigger="mdePopoverTrigger">
         <mat-icon class="white-color">account_circle</mat-icon>
       </button>
