--- a/src/app/component/user-creation/user-creation.component.html
+++ b/src/app/component/user-creation/user-creation.component.html
@@ -30,7 +30,7 @@ Documents upload
             <mat-label>Name</mat-label>
             <input matInput formControlName="Name">
             <mat-error
-              *ngIf="(!UserForm.controls['Name'].valid && !UserForm.controls['Name'].touched ) || IsFormSubmitted">
+              *ngIf="!UserForm.controls['Name'].valid && (!UserForm.controls['Name'].dirty  || IsFormSubmitted)">
               Please enter Name
             </mat-error>
           </mat-form-field>
@@ -39,7 +39,7 @@ Documents upload
             <mat-label>User Name</mat-label>
             <input matInput formControlName="UserName">
             <mat-error
-              *ngIf="(!UserForm.controls['UserName'].valid && !UserForm.controls['UserName'].touched ) || IsFormSubmitted">
+              *ngIf="!UserForm.controls['UserName'].valid && (!UserForm.controls['UserName'].dirty  || IsFormSubmitted)">
               Please enter User Name
             </mat-error>
           </mat-form-field>
@@ -48,7 +48,7 @@ Documents upload
             <mat-label>Email</mat-label>
             <input matInput formControlName="Email">
             <mat-error
-              *ngIf="(!UserForm.controls['Email'].valid && !UserForm.controls['Email'].touched ) || IsFormSubmitted">
+              *ngIf="!UserForm.controls['Email'].valid && (!UserForm.controls['Email'].dirty  || IsFormSubmitted)">
               Please enter a valid email address
             </mat-error>
           </mat-form-field>
@@ -57,7 +57,7 @@ Documents upload
             <mat-label>Phone No</mat-label>
             <input matInput formControlName="PhoneNo">
             <mat-error
-              *ngIf="(!UserForm.controls['PhoneNo'].valid && !UserForm.controls['PhoneNo'].touched ) || IsFormSubmitted">
+              *ngIf="!UserForm.controls['PhoneNo'].valid && (!UserForm.controls['PhoneNo'].dirty  || IsFormSubmitted)">
               Please enter a valid Phone Number
             </mat-error>
           </mat-form-field>
@@ -65,7 +65,7 @@ Documents upload
       </form>
     </mat-card>
     <div class="justify-content-end">
-      <button mat-stroked-button (click)="SaveUser()">Create User</button>
+      <button mat-stroked-button class="margin-top5" (click)="SaveUser()">Create User</button>
     </div>
   </div>
   <div></div>
