--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,10 @@ body {
   background-color: $background-color;
 }
 
-
+.stepperHeading {
+  color: $background-color;
+  font-weight: bold;
+}
 mat-sidenav-container,
 mat-sidenav-content,
 mat-sidenav {
