--- a/src/app/component/user-creation/user-creation.component.html
+++ b/src/app/component/user-creation/user-creation.component.html
@@ -28,44 +28,44 @@ Documents upload
         <div class="flexcolumn">
           <mat-form-field>
             <mat-label>Name</mat-label>
-            <input matInput formControlName="Name">
-            <mat-error
+            <input matInput formControlName="name">
+            <!-- <mat-error
               *ngIf="!UserForm.controls['Name'].valid && (!UserForm.controls['Name'].dirty  || IsFormSubmitted)">
               Please enter Name
-            </mat-error>
+            </mat-error> -->
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>User Name</mat-label>
-            <input matInput formControlName="UserName">
-            <mat-error
+            <input matInput formControlName="userName">
+            <!-- <mat-error
               *ngIf="!UserForm.controls['UserName'].valid && (!UserForm.controls['UserName'].dirty  || IsFormSubmitted)">
               Please enter User Name
-            </mat-error>
+            </mat-error> -->
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Email</mat-label>
-            <input matInput formControlName="Email">
-            <mat-error
+            <input matInput formControlName="mailId">
+            <!-- <mat-error
               *ngIf="!UserForm.controls['Email'].valid && (!UserForm.controls['Email'].dirty  || IsFormSubmitted)">
               Please enter a valid email address
-            </mat-error>
+            </mat-error> -->
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Phone No</mat-label>
-            <input matInput formControlName="PhoneNo">
-            <mat-error
+            <input matInput formControlName="mobile">
+            <!-- <mat-error
               *ngIf="!UserForm.controls['PhoneNo'].valid && (!UserForm.controls['PhoneNo'].dirty  || IsFormSubmitted)">
               Please enter a valid Phone Number
-            </mat-error>
+            </mat-error> -->
           </mat-form-field>
         </div>
       </form>
     </mat-card>
     <div class="justify-content-end">
-      <button mat-stroked-button class="margin-top5" (click)="SaveUser()">Create User</button>
+      <button app-button class="margin-top5" (click)="SaveUser()">Create User</button>
     </div>
   </div>
   <div></div>
