--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -143,7 +143,7 @@
           </form>
         </mat-card>
         <!-- <div class="justify-content-end">
-          <button mat-stroked-button (click)="SaveDocs()">Save Documents</button>
+          <button app-button (click)="SaveDocs()">Save Documents</button>
         </div> -->
       </div>
       <div></div>
@@ -152,5 +152,5 @@
 </mat-horizontal-stepper>
 
 <div class="justify-content-end pr-2">
-  <button mat-stroked-button (click)="SaveBankInfo()">Save</button>
+  <button app-button (click)="SaveBankInfo()">Save</button>
 </div>
