--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<!-- <mat-card> -->
+<ag-grid-angular style="width: 100%; height: 100%;" class="ag-theme-balham" [rowData]="rowData"
+  [columnDefs]="columnDefs">
+</ag-grid-angular>
+<!-- </mat-card> -->
