--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,10 +1,6 @@
 <div class="col-md-6 offset-md-3 mt-5">
-<!--     <div class="alert alert-info">
-        Username: admin<br />
-        Password: admin
-    </div> -->
     <div class="card">
-        <h4 class="card-header">Login</h4>
+        <div class="header">Login</div>
         <div class="card-body">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
@@ -21,7 +17,7 @@
                         <div *ngIf="f.password.errors.required">Password is required</div>
                     </div>
                 </div>
-                <button [disabled]="loading" class="btn btn-primary">
+                <button [disabled]="loading" class="app-button">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
