tokeninjector , api calls for login and get all crfeated users

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -26,3 +26,16 @@
         </div>
     </div>
 </div>
+
+<!-- <div style="background-color: #172b4d ;color: white;text-align: center;font-weight: bold;">
+  VCIPL
+</div>
+<div>
+ <p>Your account with VCIPL is created successfully. below is your default password</p>
+ <div style="text-align: center;font-weight: bold;font-size: 20;">
+
+ </div>
+</div> -->
+
+<!-- <div style="background-color: #172b4d ;color: white;text-align: center;font-weight: bold;">VCIPL</div>
+<div><p>Your account with VCIPL is created successfully. below is your default password</p><div style="text-align: center;font-weight: bold;font-size: 20;"></div></div> -->
