--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -21,6 +21,7 @@
         <mat-card style="max-width: 300px;background-color: #80808014;">
           <mat-card-content>
             User Details
+            <button class="app-button" (click) = 'logout()'>Logout</button>
           </mat-card-content>
         </mat-card>
       </mde-popover>
